Versão Estável: Página Detalhamento

--- a/BaladasUniversitarias/Fontes/WebContent/WEB-INF/web.xml
+++ b/BaladasUniversitarias/Fontes/WebContent/WEB-INF/web.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-     version="2.4">
-	<display-name>BaladasUniversitarias</display-name>
-	<servlet>
-		<description>
-		Página inicial do Baladas Universitárias</description>
-		<display-name>PaginaInicial</display-name>
-		<servlet-name>PaginaInicial</servlet-name>
-		<servlet-class>br.mackenzie.baladas.apresentacao.PaginaInicial</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>PaginaInicial</servlet-name>
-		<url-pattern>/PaginaInicial</url-pattern>
-	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>/jsp/index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:javaee="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" version="2.4">
+  <servlet>
+    <servlet-name>PaginaInicial</servlet-name>
+    <servlet-class>br.mackenzie.baladas.apresentacao.PaginaInicial</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PaginaInicial</servlet-name>
+    <url-pattern>/PaginaInicial</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>DetalhesEvento</servlet-name>
+    <servlet-class>br.mackenzie.baladas.apresentacao.DetalhesEvento</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DetalhesEvento</servlet-name>
+    <url-pattern>/DetalhesEvento</url-pattern>
+  </servlet-mapping>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>/jsp/index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+  </welcome-file-list>
 </web-app>
